// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render image 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 class="r-image-preview__overlay"
                 role="button"
                 tabindex="0"
>
  <div class="r-overlay">
  </div>
</transition-stub>
<transition-stub name="r-fade"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--center r-image-preview"
  >
    <div class="r-swipe r-image-preview__swipe">
      <div style="transition-duration: 300ms; transform: translateX(0px);"
           class="r-swipe__track"
      >
        <div class="r-swipe-item r-image-preview__swipe-item">
        </div>
        <div class="r-swipe-item r-image-preview__swipe-item">
        </div>
        <div class="r-swipe-item r-image-preview__swipe-item">
        </div>
      </div>
    </div>
    <div class="r-image-preview__index">
      1 / 3
    </div>
  </div>
</transition-stub>
`;

exports[`should change close icon position when using close-icon-position prop 1`] = `
<i class="r-badge__wrapper r-icon r-image-preview__close-icon r-image-preview__close-icon--top-left r-haptics-feedback"
   role="button"
>
</i>
`;

exports[`should change close icon when using close-icon prop 1`] = `
<i class="r-badge__wrapper r-icon r-image-preview__close-icon r-image-preview__close-icon--top-right r-haptics-feedback"
   role="button"
>
</i>
`;

exports[`should render cover slot correctly 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 class="r-image-preview__overlay"
                 role="button"
                 tabindex="0"
>
  <div class="r-overlay">
  </div>
</transition-stub>
<transition-stub name="r-fade"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--center r-image-preview"
  >
    <div class="r-swipe r-image-preview__swipe">
      <div style="transition-duration: 300ms; transform: translateX(0px);"
           class="r-swipe__track"
      >
      </div>
    </div>
    <div class="r-image-preview__index">
      1 / 0
    </div>
    <div class="r-image-preview__cover">
      Custom Cover
    </div>
  </div>
</transition-stub>
`;

exports[`should render index slot correctly 1`] = `
<div class="r-image-preview__index">
  Custom Index: 0
</div>
`;

exports[`should swipe to current index after calling the swipeTo method 1`] = `
<div class="r-image-preview__index">
  3 / 3
</div>
`;

exports[`zoom in and drag image to move 1`] = `
<div class="r-image r-image-preview__image"
     style="transition-duration: .3s;"
>
  <img src="https://fastly.jsdelivr.net/npm/@ryxon/assets/apple-1.jpeg"
       class="r-image__img"
       style="object-fit: contain;"
  >
  <div class="r-image__loading">
    <div class="r-loading r-loading--spinner"
         aria-live="polite"
         aria-busy="true"
    >
      <span class="r-loading__spinner r-loading__spinner--spinner">
        <i class="r-loading__line r-loading__line--1">
        </i>
        <i class="r-loading__line r-loading__line--2">
        </i>
        <i class="r-loading__line r-loading__line--3">
        </i>
        <i class="r-loading__line r-loading__line--4">
        </i>
        <i class="r-loading__line r-loading__line--5">
        </i>
        <i class="r-loading__line r-loading__line--6">
        </i>
        <i class="r-loading__line r-loading__line--7">
        </i>
        <i class="r-loading__line r-loading__line--8">
        </i>
        <i class="r-loading__line r-loading__line--9">
        </i>
        <i class="r-loading__line r-loading__line--10">
        </i>
        <i class="r-loading__line r-loading__line--11">
        </i>
        <i class="r-loading__line r-loading__line--12">
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`zoom in and drag image to move 2`] = `
<div class="r-image r-image-preview__image"
     style="transition-duration: .3s;"
>
  <img src="https://fastly.jsdelivr.net/npm/@ryxon/assets/apple-1.jpeg"
       class="r-image__img"
       style="object-fit: contain;"
  >
  <div class="r-image__loading">
    <div class="r-loading r-loading--spinner"
         aria-live="polite"
         aria-busy="true"
    >
      <span class="r-loading__spinner r-loading__spinner--spinner">
        <i class="r-loading__line r-loading__line--1">
        </i>
        <i class="r-loading__line r-loading__line--2">
        </i>
        <i class="r-loading__line r-loading__line--3">
        </i>
        <i class="r-loading__line r-loading__line--4">
        </i>
        <i class="r-loading__line r-loading__line--5">
        </i>
        <i class="r-loading__line r-loading__line--6">
        </i>
        <i class="r-loading__line r-loading__line--7">
        </i>
        <i class="r-loading__line r-loading__line--8">
        </i>
        <i class="r-loading__line r-loading__line--9">
        </i>
        <i class="r-loading__line r-loading__line--10">
        </i>
        <i class="r-loading__line r-loading__line--11">
        </i>
        <i class="r-loading__line r-loading__line--12">
        </i>
      </span>
    </div>
  </div>
</div>
`;
